--- a/app/views/customers/details/_locations.html.haml
+++ b/app/views/customers/details/_locations.html.haml
@@ -20,6 +20,12 @@
       %li= "Fax: #{@location.fax}"
       .clear
   = form_for([@customer, @form_location], :html => {:style => "display: #{@displayLocationForm || 'none'};"}) do |f|
+    -if @form_location.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(@form_location.errors.count, "error")} prohibited this contact from being saved:"
+        %ul
+          - @form_location.errors.full_messages.each do |msg|
+            %li= msg
     %fieldset
       %legend Create Location
       = link_to image_tag("/images/icons/container-close.gif"), customer_path(@customer, :order => params[:order])
