--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -2,7 +2,7 @@
 	%a{:class => 'wizardFormSwitch'}New Project [open/close]
 	-if @project.errors.any?
 		#error_explanation
-			%h2= "#{pluralize(@customer.errors.count, "error")} prohibited this contact from being saved:"
+			%h2= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
 			%ul
 				- @project.errors.full_messages.each do |msg|
 					%li= msg
