--- a/app/views/works/_calendar.html.haml
+++ b/app/views/works/_calendar.html.haml
@@ -2,7 +2,7 @@
 .clear
 %ul#calendar
 	-7.times do
-		%li{:class=>"wday#{@dayCalendar.wday}"}= link_to @dayCalendar.strftime("%a. %d.%m."), { :controller => :works, :action => :index, :date => @dayCalendar.strftime("%Y-%m-%d") }, :remote => false
+		%li{:class=>"wday#{@dayCalendar.wday}", :id => "#{'active' if @daySelected == @dayCalendar}" }= link_to @dayCalendar.strftime("%a. %d.%m."), { :controller => :works, :action => :index, :date => @dayCalendar.strftime("%Y-%m-%d") }, :remote => false
 		-@dayCalendar = @dayCalendar.+(1)
 	%li#calendarWeek
 		= link_to image_tag("/images/icons/calendarweek-prev10.gif"), works_path(:date => @jumping_links.[]("prev10")), :remote => false
