--- a/app/views/customers/details/_contacts.html.haml
+++ b/app/views/customers/details/_contacts.html.haml
@@ -9,7 +9,7 @@
       %li Department
       %li.fon Contact
       .clear
-    - @contacts.each do |contact|
+    = @contacts.each do |contact|
       %ul.record
         %li.name= "#{contact.salutation} #{contact.title} #{contact.firstname} #{contact.lastname}"
         %li= contact.department
@@ -30,7 +30,7 @@
         #error_explanation
           %h2= "#{pluralize(@form_contact.errors.count, "error")} prohibited this contact from being saved:"
           %ul
-            - @form_contact.errors.full_messages.each do |msg|
+            = @form_contact.errors.full_messages.each do |msg|
               %li= msg
       %legend Create Contact
       = link_to image_tag("/images/icons/container-close.gif"), customer_location_path(@customer, @location, :order => params[:order])
