--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -4,7 +4,7 @@
 		#error_explanation
 			%h2= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
 			%ul
-				- @project.errors.full_messages.each do |msg|
+				= @project.errors.full_messages.each do |msg|
 					%li= msg
 	%hr/
 	.wrapper
@@ -27,14 +27,14 @@
 				= f.hidden_field :contact_id, :value => @form_contacts.first.id
 				= f.submit 'Save'
 		#selectCustomer
-			-form_tag new_project_path, :method => :get, :remote => false do
+			= form_tag new_project_path, :method => :get, :remote => false do
 				%fieldset.customer
 					%dl
 						%dt Customer
 						%dd
 							= select_tag(:customer_id, options_for_select(@form_customers.map {|c| [c.name, c.id]}, params[:customer_id].to_i), {:onchange => "this.form.customerSubmit.click();"})
 							%input{:type=>"submit", :value=>"submit", :name=>"customerSubmit", :style=>"display:none"}
-			-form_tag new_project_path, :method => :get, :remote => false do
+			= form_tag new_project_path, :method => :get, :remote => false do
 				%fieldset.contact
 					%dl
 						%dt Main Contact
