--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -14,7 +14,7 @@
     %th
     %th
 
-  - @projects.each do |project|
+  = @projects.each do |project|
     %tr
       %td= project.title
       %td= project.description
