Add user_id to work and setup a factory / Write features for work-controller / code-changes on work-controller and form

--- a/app/views/works/index.html.haml
+++ b/app/views/works/index.html.haml
@@ -2,12 +2,17 @@
 #formWrapper
 	#createTimeWrapper
 		= form_for(@work, :remote => false) do |f|
-			#errorExplanation
+			-if @work.errors.any?
+				#error_explanation
+					%h2= "#{pluralize(@work.errors.count, "error")} prohibited this work from being saved:"
+					%ul
+						= @work.errors.full_messages.each do |msg|
+							%li= msg
 			%dl
-				%dt.time= f.label :starttime, "Start:"
-				%dd.time= f.text_field :starttime, :size => 4
-				%dt.time= f.label :endtime, "End:"
-				%dd.time= f.text_field :endtime, :size => 4
+				%dt.time= f.label :start, "Start:"
+				%dd.time= f.text_field :start, :size => 4
+				%dt.time= f.label :end, "End:"
+				%dd.time= f.text_field :end, :size => 4
 				%dd.description= f.text_area :description
 				%dt.submit
 					= f.hidden_field :project_id, :value => @projects.first.id
