--- a/app/views/projects/report.html.haml
+++ b/app/views/projects/report.html.haml
@@ -1,17 +1,36 @@
--@project.works.each do |work|
-  %ul{:class=>"record", :id=>"work#{work.id}"}
-    %li.time= "#{work.start.strftime('%H:%M')} to #{work.end.strftime('%H:%M')}"
-    %li.duration= "#{work.duration} min."
-    %li.customer= @project.customer.name
-    %li.description= work.description
-    .clear 
+%p Wildner+Designer • Hans-Vogel-Straße 24 • 90765 Fürth
+%adress
+	=@project.contact.location.name
+	%br/
+	= "#{@project.contact.firstname} #{@project.contact.lastname}"
+	%br/
+	=@project.contact.location.street
+	%br/
+	%br/
+	= "#{@project.contact.location.zip} #{@project.contact.location.city}"
+
+%h1 Project Report: #{@project.id}
+%h2=@project.title
 %hr/
-%dl
-  %dt Duration
-  %dd
-    = @project.works.sum("duration").to_f / 60
-    hours
-  %dt Calculated
-  %dd
-    = @project.budget
-    hours
+%div#works
+	-@project.works.order("start ASC").each do |work|
+		%ul{:class=>"record", :id=>"work#{work.id}"}
+			%li.time
+				= work.start.strftime('%Y-%m-%d')
+				%br/
+				= "#{work.start.strftime('%H:%M')} to #{work.end.strftime('%H:%M')}"
+				%br/
+				= "#{User.find(work.user_id).firstname} #{User.find(work.user_id).lastname}"
+			%li.description= work.description
+			%li= "#{work.duration} min."
+			.clear 
+	%hr/
+	%dl
+		%dt Duration
+		%dd
+			= @project.works.sum("duration").to_f / 60
+		hours
+		%dt Calculated
+		%dd
+			= @project.budget
+		hours
