Add profile/logout link to top-navigation / Set route for edit-path and change view of edit-Form for users / write update user feature

--- a/public/stylesheets/nancy.less
+++ b/public/stylesheets/nancy.less
@@ -23,6 +23,21 @@ div#navigation {
 			text-align: center;
 			background-color: @blueLight;
 		}
+		li.small {
+			.grid(8,0,1);
+			font-size: 12px;
+			line-height: 18px;
+			margin-top: 22px;
+		}
+		li.user {
+			border: none;
+			.grid(15,0,1);
+			font-size: 12px;
+			line-height: 22px;
+			background-color: transparent;
+			color: white;
+			margin-top: 18px;
+		}
 	}
 }
 
