--- a/app/views/layouts/projects.html.haml
+++ b/app/views/layouts/projects.html.haml
@@ -15,6 +15,10 @@
 				%li= link_to 'Works', works_path()
 				%li= link_to 'Customers', customers_path()
 				%li.active= link_to 'Projects', projects_path()
+				%li.small= link_to 'profile', edit_user_registration_path()
+				%li.small= link_to 'logout', destroy_user_session_path()
+				%li.user
+					%span= "#{current_user.firstname} #{current_user.lastname}"
 	.container#flash
 		- flash.each do |key, value|
 			%div{:class => key}= value
