--- a/public/stylesheets/customers.less
+++ b/public/stylesheets/customers.less
@@ -2,7 +2,7 @@
 
 body#customers { 
 	form { display: none; }
-	div.toolbar li,  ul.title li { .grid(28); }
+	div.toolbar li,  ul.title li { .grid(26); }
 	ul.title li.actions {
 		.grid(10);
 		text-align: right;
@@ -24,48 +24,70 @@ div.customer {
 			border-top: 5px solid @grey;
 			padding: 10px;
 			
-			.details { ul li { .grid(18); } }
+			.details {
+				ul li { .grid(24); }
+			
+			}
 			form {
+				padding: 0px !important;
 				dl {
 					dt {
 						.grid(10);
+						margin-bottom: 10px;
 						text-align: right;
 					}
 					dd {
-						.grid(20);
+						.grid(18);
+						margin-bottom: 10px;
 						input { width: 150px; }
 						input.zip { width: 40px; }
 						input.city { width: 90px; }
+					}
+					dt.submit {
+						margin-left: 82px;
+						input.submit { margin: 0px !important; }
 					}
 				}
 			}
 		}
 		div.contacts {
 			.roundedTop;
+			padding: 10px;
 			border-top: 5px solid @grey;
-			ul.toolbar {
-				
-			}
 			ul {
-				li { .grid(28); }
+				li { .grid(26); }
 				li.name, li.fon {
-					.grid(30);
+					.grid(28);
 					span { display: block; }
 				}
 				li.actions { .grid(6);	}
 			}
-			
-			
-			form dl {
-				dt {
-					.grid(10);
-					text-align: right;
-				}
-				dd {
-					.grid(20);
-					input { width: 150px; }
-					input.zip { width: 40px; }
-					input.city { width: 90px; }
+			ul.toolbar {
+				color: grey;
+				border-bottom: 2px dotted grey;
+				margin-bottom: 20px;
+			}
+			ul.record { margin-bottom: 10px; }
+			form {
+				padding: 0px !important;
+				dl {
+					dt {
+						.grid(9);
+						margin-bottom: 10px;
+						text-align: right;
+					}
+					dd {
+						.grid(20);
+						margin-bottom: 10px;
+						input { width: 150px; }
+						input.title { width: 89px; }
+						input.zip { width: 40px; }
+						input.city { width: 90px; }
+					}
+					dt.submit {
+						margin-left: 82px;
+						input.submit { margin: 0px !important; }
+					}
 				}
 			}
 		}
@@ -75,7 +97,7 @@ div.customer {
 			font-weight: bold;
 			font-size: 11px;
 		}
-		div.details h2, form legend { .grid(84) }
+		div.details h2, form legend { .grid(78) }
 		div.details span.actions, form a {
 			.grid(10);
 			text-align: right;
