--- a/app/views/customers/details/_locations.html.haml
+++ b/app/views/customers/details/_locations.html.haml
@@ -14,10 +14,14 @@
     %hr.clear/
     %ul.record
       %li= @location.name
-      %li= @location.street
-      %li= "#{@location.zip} #{@location.city}"
-      %li= "Fon: #{@location.fon}"
-      %li= "Fax: #{@location.fax}"
+      %li
+        = @location.street
+        %br/
+        = "#{@location.zip} #{@location.city}"
+      %li
+        = "Fon: #{@location.fon}"
+        %br/
+        = "Fax: #{@location.fax}"
       .clear
   = form_for([@customer, @form_location], :html => {:style => "display: #{@displayLocationForm || 'none'};"}) do |f|
     -if @form_location.errors.any?
@@ -43,5 +47,6 @@
         %dd= f.text_field :fon
         %dt= f.label :fax
         %dd= f.text_field :fax
+        %dt.submit= f.submit 'Save Location', :class =>"submit"
     = f.hidden_field :customer_id, :value => @customer.id
-    = f.submit 'Save Location'
+    
