--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,6 +1,5 @@
-%h2
-	Edit #{resource_name.to_s.humanize}
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+	%h2 Edit #{resource_name.to_s.humanize}
 	= devise_error_messages!
 	%dl
 		%dt= f.label :firstname
@@ -9,10 +8,14 @@
 		%dd= f.email_field :lastname
 		%dt= f.label :email
 		%dd= f.email_field :email
-		%dt= f.label :password
+		%dt= f.label :password, "New Password"
 		%dd= f.password_field :password
 		%dt= f.label :password_confirmation, "Confirmation"
 		%dd= f.password_field :password_confirmation
-		%dt= f.label :current_password
-		%dd= f.password_field :current_password
-		%dt= f.submit "Update"
+		.clear
+		%dt.current_password= f.label :current_password
+		%dd.current_password
+			= f.password_field :current_password
+			(to confirm your identity)
+		%dt &nbsp;
+		%dd= f.submit "Update", :class => "submit"
