--- a/app/views/users/shared/_links.haml
+++ b/app/views/users/shared/_links.haml
@@ -1,10 +1,10 @@
 %ul.links
   - if controller_name != 'sessions'
-    %li= link_to "| Sign in", new_session_path(resource_name)
+    %li= link_to "• Sign in", new_session_path(resource_name)
   - if devise_mapping.registerable? && controller_name != 'registrations'
-    %li= link_to "| Sign up", new_registration_path(resource_name)
+    %li= link_to "• Sign up", new_registration_path(resource_name)
   - if devise_mapping.recoverable? && controller_name != 'passwords'
-    %li= link_to "| Forgot your password?", new_password_path(resource_name)
+    %li= link_to "• Forgot your password?", new_password_path(resource_name)
   - if devise_mapping.omniauthable?
     - resource_class.omniauth_providers.each do |provider|
       %li= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
