--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -52,8 +52,8 @@
 						%dd= "#{project.budget} (h)"
 						%dt Discount:
 						%dd= "#{project.discount} %"
-						%dt Type:
-						%dd= project.type
+						-#%dt Type:
+						-#%dd= project.type
 						.clear
 				.contacts
 					= render :partial => 'projects/details/contacts'
