--- a/public/stylesheets/nancy.less
+++ b/public/stylesheets/nancy.less
@@ -2,13 +2,16 @@
 html { height: 100% ;}
 body {
 	background-color: white;
-	font-family: 'Cuprum', verdana, arial;
 	letter-spacing: 0.8px;
 	.gradient(#EFF6FF, #4A6A83);
 	min-height: 100%;
 	height: 100%;
 }
-
+body, p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size:   13px;
+  line-height: 18px;
+}
 div#navigation {
 	height: 50px;
 	background-color: @blueDark;
@@ -28,7 +31,7 @@ div#navigation {
 		li.active {
 			.gradient(transparent, transparent);
 			background-color: #E2EBF5;
-			a { color: orange; }
+			a { color: @orange; }
 		}
 		li.small {
 			.grid(8,0,1);
@@ -99,27 +102,6 @@ div#content {
 	ul.title { .rounded; }
 }
 
-
-// SPEZIELLE FORMULAR ELEMENTE //
-
-div#customerForm {
-	dl {
-		background-color: @blueLight;
-		dt {
-			.grid(10);
-			text-align: right;
-		}
-		dd {
-			.grid(20);
-			input { width: 150px; }
-			input.zip { width: 40px; }
-			input.city { width: 90px; }
-		}
-	}
-}
-
-
-
 div.filter {
 	margin-left: 20px;
 	li {
@@ -129,4 +111,80 @@ div.filter {
 		line-height: 30px;
 		text-align: center;
 	}
+}
+
+
+
+
+
+
+body { background-color: #fff; color: #333; }
+
+body, p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif !important;
+  font-size:   13px !important;
+  line-height: 18px !important;
+}
+
+a { color: #000; }
+a:visited { color: #000; }
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+#notice {
+  color: green;
+}
+
+.field_with_errors { display: inline; }
+.field_with_errors input {
+	border: 1px solid darkred;
+  background-color: #FF6F6F;
+}
+
+#error_explanation {
+	.rounded;
+	border: 2px solid darkred;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#error_explanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  margin-bottom: 0px;
+  background-color: #FF6F6F;
+  color: darkred;
+}
+#error_explanation ul {
+	margin-left: 20px !important;
+}
+#error_explanation ul li {
+  font-size: 12px;
+  list-style: square;
+}
+div#flash div {
+	display: inline;
+	padding: 10px 10px 0px;
+	margin-left: 40px;
+}
+div#flash div.notice { 
+	.roundedTop;
+	border-top: 2px solid #77FF6F;
+	border-left: 2px solid #77FF6F;
+	border-right: 2px solid #77FF6F;
+	background-color: #B3FFAF;
+}
+div#flash div.alert { 
+	.roundedTop;
+	border-top: 2px solid darkred;
+	border-left: 2px solid darkred;
+	border-right: 2px solid darkred;
+	background-color: #FF6F6F;
 }
