Add customer wizard to application on first setup / Adjust cucumber features and stylesheets

--- a/public/stylesheets/login.less
+++ b/public/stylesheets/login.less
@@ -3,12 +3,16 @@
 	background: url(/images/login-background.png) top center no-repeat;
 	height: 590px;
 	width: 900px !important;
-	.wrapper {
+	.wrapper, .customerWrapper {
 		.rounded;
 		background-color: #E5EEFB !important;
 		width: 390px;
 		min-height: 300px;
 		margin: 100px auto 0px auto;
+	}
+	.customerWrapper {
+		margin: 20px auto 0px auto;
+		p { margin: 10px; }
 	}
 
 	h2 {
