--- a/app/views/layouts/users.mobile.haml
+++ b/app/views/layouts/users.mobile.haml
@@ -14,8 +14,8 @@
 				%div{"data-role" => "navbar"}
 					%ul
 						%li
-							%a{"data-icon" => "refresh", :href => works_path} Works
+							%a{"data-icon" => "refresh", :href => new_session_path(resource_name)} Sign in
 						%li
-							%a.ui-btn-active{"data-icon" => "grid", :href => customers_path} Customers
+							%a{"data-icon" => "grid", :href => new_registration_path(resource_name)} Sign Up
 						%li
-							%a{"data-icon" => "gear", :href => projects_path} Projects
+							%a{"data-icon" => "gear", :href => new_password_path(resource_name)} Req. Passw.
