--- a/app/views/layouts/settings.html.haml
+++ b/app/views/layouts/settings.html.haml
@@ -4,26 +4,25 @@
 	%meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
 	%title Nancy
 	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/nancy.less'}
-	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/projects.less'}
+	%link{:rel => 'stylesheet/less', :type => 'text/css', :href => '/stylesheets/settings.less'}
 	= javascript_include_tag :defaults
 	= stylesheet_link_tag :all
 	= csrf_meta_tag
-%body#projects
+%body
 	#navigation
 		.container
 			%ul
 				%li= link_to 'Works', works_path()
 				%li= link_to 'Customers', customers_path()
-				%li.active= link_to 'Projects', projects_path()
+				%li= link_to 'Projects', projects_path()
 				%li.small= link_to 'profile', edit_user_registration_path()
-				%li.small= link_to 'settings', settings_path()
+				%li.small.active= link_to 'settings', settings_path()
 				%li.small= link_to 'logout', destroy_user_session_path()
 				%li.user
 					%span= "#{current_user.firstname} #{current_user.lastname}"
 	.container#flash
 		- flash.each do |key, value|
-			%div{:class => key}= value
+			%div{:class => key}= value	
 	.container#content
-		= render 'projects/form'
-		= render 'projects/list'
+		= yield
 	.clear
