Setup views and stylesheets for settings-controller / init manage user interface with first tests

--- a/public/stylesheets/nancy.less
+++ b/public/stylesheets/nancy.less
@@ -105,12 +105,13 @@ div#content {
 div.filter {
 	margin-left: 20px;
 	li {
-		.grid(13,0,1);
+		.grid(15,0,1);
 		.roundedTop;
-		background-color: @blueLight;
+		background-color: @blueMedium;
 		line-height: 30px;
 		text-align: center;
 	}
+	li.active { background-color: @blueLight; }
 }
 
 
