--- a/app/views/settings/index.html.haml
+++ b/app/views/settings/index.html.haml
@@ -1,12 +1,27 @@
-.halfContainer#users
-	%h2 Manage User
-	- if @user.new_record?
-		= form_for @user, :url => user_admin_index_path do |f|
-			- render :partial => "user/form", :locals => { :f => f }
-	- else
-		= form_for @user, :url => user_admin_path(@user) do |f|
-			- render :partial => "user/form", :locals => { :f => f }
+.filter
+	%ul
+		%li.active= link_to "Manage Users", ""
+		%li.active= link_to "Managae Holidays", ""
+		%li.active= link_to "Manage Templates", ""
 		.clear
+.field
+	#userForm
+		%h2 Manage User
+		- if @user.new_record?
+			= form_for @user, :url => user_admin_index_path do |f|
+				- render :partial => "user/form", :locals => { :f => f }
+		- else
+			= form_for @user, :url => user_admin_path(@user) do |f|
+				- render :partial => "user/form", :locals => { :f => f }
+		.clear
+
+	#daySequenceForm
+		%h2 Manage holidays, vacations and days of absence
+		= form_for @day_sequence do |f|
+			- render :partial => "day_sequences/form", :locals => { :f => f }
+		.clear
+	.clear
+
 	%ul.fieldbar
 		%li Name / E-mail
 		%li.small Hldy.
@@ -25,16 +40,4 @@
 					= link_to "E", edit_user_admin_path(user)
 					= link_to "D", user_admin_path(user), :confirm => 'Are you sure?', :method => :delete
 				.clear
-.halfContainer#holidays
-	%h2 Manage Holidays
-	%dl
-		- @users.each do |user|
-			%dt= "#{user.firstname} #{user.firstname}"
-			%dd= user.email
-			%dd.small= user.holidays
-			%dd.small= user.hours
-			%dd.actions
-				= link_to "Edit", edit_user_admin_path(user)
-				= link_to "Delete", user_admin_path(user), :confirm => 'Are you sure?', :method => :delete
-		.clear
 .clear
