--- a/app/views/user/_form.html.haml
+++ b/app/views/user/_form.html.haml
@@ -1,27 +1,24 @@
+%h2 Add/Edit User
 -if @user.errors.any?
 	#error_explanation
 		%h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
 		%ul
 			- @user.errors.full_messages.each do |msg|
 				%li= msg
-%ul
-	%li
-		= f.label :firstname
-		= f.text_field :firstname
-	%li
-		= f.label :lastname
-		= f.text_field :lastname
-	%li
-		= f.label :email
-		= f.text_field :email
-	%li
-		= f.label :holidays, "Holiday / Hours p.D."
+%dl
+	%dt= f.label :firstname
+	%dd= f.text_field :firstname
+	%dt= f.label :lastname
+	%dd= f.text_field :lastname
+	%dt= f.label :email
+	%dd= f.text_field :email
+	%dt= f.label :holidays, "Holiday / Hours"
+	%dd	
 		= f.text_field :holidays, :class => "small"
 		= f.text_field :hours, :class => "small"
-	%li
-		= f.label :password, "New Password"
-		= f.password_field :password
-	%li
-		= f.label :password_confirmation, "Password Confirmation"
-		= f.password_field :password_confirmation
-	%li= f.submit "Save User", :class => "submit"
+	%dt= f.label :password, "New Password (leave blank)"
+	%dd= f.password_field :password
+	%dt= f.label :password_confirmation, "Password Confirmation"
+	%dd= f.password_field :password_confirmation
+	%dt.submit= f.submit "Save User", :class => "submit"
+	.clear
