--- a/public/stylesheets/settings.less
+++ b/public/stylesheets/settings.less
@@ -26,6 +26,13 @@ div#userForm form {
 		}
 	}
 }
+div#users {
+	div.toolbar ul li, div.user ul li { .grid(21) }
+	div.user {
+		margin-bottom: 3px;
+		ul li.actions { .grid(4,21) }
+	}
+}
 
 
 
@@ -61,7 +68,6 @@ div#holidayForm form {
 
 
 div#sequences {
-	
 	div.holidays ul.title li, div.toolbar li, div.user ul.title li { .grid(21); }
 	div.user ul.title li.actions, div.holidays ul.title li.actions {
 		.grid(4);
