--- a/app/views/projects/show.mobile.haml
+++ b/app/views/projects/show.mobile.haml
@@ -1,5 +1,6 @@
 %div{"data-role" => "header"}
   %h1= @project.title
+%div{"data-role" => "content"}
   %p=@project.description
   %div{"data-role" => "collapsible", "data-collapsed" => "true"}
     %h3 Customer information
